2007-04-22  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/redmond/src/redmond_gtk2_drawing.c:
	(redmond_draw_option):
	Set a minimum radius of 6 pixel for radio buttons. Otherwise the
	treeview radio buttons are too small. (In theory the indicator-size
	is 12, but GTK+ subtracts one, and then it gets rounded down to 10
	by the engine)

2007-04-22  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/smooth/src/engine/shared/gtk/smooth_gtk_rc.c:
	(smooth_arrow_merge):
	Call a helper function and added a comment to clarify what the code
	is for.

2007-04-21  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_button):
	* engines/clearlooks/src/clearlooks_draw_inverted.c:
	(clearlooks_inverted_draw_button):
	Last time I forgot to fix radius of new inset function, Fixed.

2007-04-20  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_inset), (clearlooks_draw_button),
	(clearlooks_draw_entry), (clearlooks_draw_scale_trough):
	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_button):
	* engines/clearlooks/src/clearlooks_draw_inverted.c:
	(clearlooks_inverted_draw_button),
	(clearlooks_register_style_inverted):
	* engines/clearlooks/src/clearlooks_types.h:
	Improved inset porting few code originally written by ECHM.
	Now it is top-left/bottom-right and it is rounded.
	Fixed problems with alpha backgrounds.

2007-04-15  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/crux/src/crux-draw.c:
	Replaced two // comments with /* */ ones. Fixes crux build for me.

2007-04-15  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	* engines/clearlooks/src/clearlooks_draw_inverted.c:
	Remove some unneccessary casts that break build on Solaris. Patch
	from Damien Carbery, bug #428772.

2007-04-15  Benjamin Berg  <benjamin@sipsolutions.net>
